# fax-cpp-raylib-template

./: .gitignore  CMakeLists.txt  README.md  buildEmscripten.bat  min_shell.html  renameProject.ps1
src/: main.cpp
